fix: uneven spacing in EventInfoSection bar

--- a/src/pages/EventPage/components/EventInfoSection.module.css
+++ b/src/pages/EventPage/components/EventInfoSection.module.css
@@ -51,8 +51,4 @@
     text-align: center;
     max-width: 320px;
   }
-
-  & span {
-    width: 100%;
-  }
 }
